change phone to tel in webcl

--- a/courses/webclient/html5-forms.html
+++ b/courses/webclient/html5-forms.html
@@ -5,9 +5,9 @@
 </head>
 <body>
   <form>
-    email : <input type="email" name="myemail" required=""><br>
-    url : <input type="url" name="myurl" required=""><br>
-    phone : <input type="phone" name="myphone" maxlength="11"><br>
+    email : <input type="email" name="myemail" required><br>
+    url : <input type="url" name="myurl" required><br>
+    phone : <input type="tel" name="myphone" maxlength="11"><br>
     date : <input type="date" name="mydatetime"><br>
     number : <input type="number" name="mynumber" min="10" max="20"><br>
     range : <input type="range" name="myrange" min="30" max="40"><br>
