adding name field for placedholder and autocomplete

--- a/courses/webclient/html5-forms.html
+++ b/courses/webclient/html5-forms.html
@@ -5,6 +5,7 @@
 </head>
 <body>
   <form>
+    name : <input type="text" name ="myname" placeholder="your name" autocomplete><br>
     email : <input type="email" name="myemail" required><br>
     url : <input type="url" name="myurl" required><br>
     phone : <input type="tel" name="myphone" maxlength="11"><br>
